--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "@heroui/switch": "2.2.8",
   "@heroui/system": "2.4.6",
   "@heroui/table": "^2.2.9",
-  "@heroui/theme": "2.4.5",
+  "@heroui/theme": "^2.4.5",
   "@heroui/user": "^2.2.7",
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.18",
+  "@sweetalert2/theme-borderless": "^5.0.26",
+  "@sweetalert2/themes": "^5.0.26",
   "@tanstack/react-query": "^5.64.2",
   "axios": "^1.7.9",
   "clsx": "2.1.1",
@@ -40,6 +42,7 @@
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "react-hook-form": "^7.54.2",
+  "sass": "^1.83.4",
   "sweetalert2": "^11.15.10",
   "zod": "^3.24.1"
  },
