--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
  },
  "dependencies": {
+  "@heroicons/react": "^2.2.0",
   "@heroui/button": "2.2.9",
   "@heroui/card": "^2.2.10",
   "@heroui/code": "2.2.6",
@@ -42,8 +43,11 @@
   "react": "18.3.1",
   "react-dom": "18.3.1",
   "react-hook-form": "^7.54.2",
+  "react-slick": "^0.30.3",
   "sass": "^1.83.4",
+  "slick-carousel": "^1.8.1",
   "sweetalert2": "^11.15.10",
+  "use-debounce": "^10.0.4",
   "zod": "^3.24.1"
  },
  "devDependencies": {
