--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "jwt-decode": "^4.0.0",
-  "next": "^15.1.6",
+  "next": "^15.1.7",
   "next-themes": "^0.4.4",
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
+  "react": "^19.0.0",
+  "react-dom": "^19.0.0",
   "react-hook-form": "^7.54.2",
   "react-slick": "^0.30.3",
   "sass": "^1.83.4",
